<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="Cylinder_HMI_Structure" Id="{4aa66e63-2d5e-4cd0-8ae5-c0d7a733277c}">
    <Declaration><![CDATA[TYPE Cylinder_HMI_Structure :
STRUCT
//input
	mode               : UINT;
	bExtend_jog        : BOOL;
	bRetract_jog       : BOOL;
	bExtend_Enable     : BOOL;
	bRetract_Enable    : BOOL;
	bAbort_Enable      : BOOL;
	bExtend_Prox       : BOOL;
	bRetract_Prox      : BOOL;
	bReset_Error       : BOOL;
//output	
	bExtend_Work       : BOOL;
	bRetract_Work      : BOOL;
	done               : BOOL;
	busy               : BOOL;
	error              : BOOL;
	errorID            : UDINT;
	errorTXT           : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>